--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "deploy-satsuma": "graph deploy gltr-staking-matic --version-label v1.0.0 --node https://subgraphs.alchemy.com/api/subgraphs/deploy --deploy-key DyOyEjESMAGfk --ipfs https://ipfs.satsuma.xyz",
     "create-local": "graph create --node http://localhost:8020/ aavegotchi/aavegotchi-gltr-staking",
     "remove-local": "graph remove --node http://localhost:8020/ aavegotchi/aavegotchi-gltr-staking",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 aavegotchi/aavegotchi-gltr-staking",
